finalizing receipt items work to connect and read data